# ani-updater

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: docker.yml  rust-ci.yml
ani_spiders/: Cargo.toml
ani_spiders/src/: lib.rs
ani_spiders/src/spider/: agedm.rs  bilibili.rs  douban.rs  iqiyi.rs  mikanani.rs  mod.rs  news.rs  tencent.rs  youku.rs
ani_subs/: Cargo.toml
ani_subs/configuration/: base.yaml  tasks.yaml
ani_subs/src/: common.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
ani_subs/src/authentication/: mod.rs
ani_subs/src/common/: app_state.rs
ani_subs/src/dao/: postgresql.rs
ani_subs/src/dao/postgresql/: ani_info_table.rs  common.rs  mod.rs  news_info_table.rs  scheduled_tasks.rs  user_info_table.rs  users_table.rs  video_info_table.rs
ani_subs/src/domain/: dto.rs  mod.rs  po.rs
ani_subs/src/middleware/: auth_middleware.rs  charset_middleware.rs  mod.rs
ani_subs/src/routes/: anis.rs  get_ani_info.rs  mod.rs  proxy_img.rs
ani_subs/src/routes/admin/: scheduled_task_reload.rs
ani_subs/src/routes/anis/: ani_info.rs  mod.rs
ani_subs/src/routes/api/: mod.rs
ani_subs/src/routes/api/anis/: ani_info.rs
ani_subs/src/routes/api/news/: get.rs
ani_subs/src/routes/api/proxy/: image.rs
ani_subs/src/routes/api/scheduled_tasks/: get.rs
ani_subs/src/routes/api/sse/: sensor.rs
ani_subs/src/routes/api/sync/: get.rs  mod.rs  post.rs  task_source.rs
ani_subs/src/routes/auth/: github.rs  mod.rs  oauth_config.rs  refresh.rs
ani_subs/src/routes/login/: post.rs
ani_subs/src/routes/register/: post.rs
ani_subs/src/routes/sync/: source.rs
ani_subs/src/service/: mod.rs  register_service.rs  task_service.rs
ani_subs/src/timer_tasker/: mod.rs  scheduler.rs  task.rs
ani_subs/tests/: health_check.rs
common/: Cargo.toml
common/src/: api.rs  dto.rs  filter.rs  lib.rs  po.rs
common/src/utils/: date_utils.rs  http_client.rs  jwt.rs  mod.rs
configuration/: base.yaml  local.yaml  production.yaml
docker/: docker-compose-pg.yml  docker-compose.yml  run.md
docs/: api-ownership.md  api.md  development_plan.md  dual-session-collaboration-templates.md  dual-session-context.md  dual-session-handoff.md  dual-session-prompt.md  github_oauth2.md  migration-plan-v0.4.x.md
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/conf/: configuration.rs  cors_config.rs  mod.rs  oauth2.rs
infra/src/db/: init_db.rs  mod.rs
infra/src/db/postgresql/: ani_collect_table.rs  ani_info_table.rs  mod.rs  news_info_table.rs  news_item_table.rs  scheduled_tasks.rs  user_info_table.rs  video_info_table.rs
infra/src/log/: telemetry.rs
migrations/: 20250525081728_create_subscriptions_table.sql  20250625140704_create_subscription_token_table.sql  20250829030848_create_users_and_user_identities_table.sql  20250902062709_alter_users_table_name.sql  20250903050953_drop_user_table.sql  20250917091305_drop_subscriptions.sql  20250920170017_add_video_info_table.sql  20250928055912_add_create_at_update_at_for_ani_info.sql  20250929110714_add_common_favorites_history_table.sql  20251119171652_alter_scheduled_tasks_params_to_jsonb.sql  20251124141442_add_field_in_table_news_info.sql  20251124154200_update_constraint_in_table_news_info.sql  20251203085348_add_health_check_task.sql  20251204075659_alter_news_info_add_field_extracted_extracted_at_error.sql  20251207115422_update_news_keywords.sql  20251212030017_update_news_items_table_and_news_keywords_table.sql  20251213062602_update_scheduled_tasks_config.sql  20251214123254_add_news_event_table.sql  20251214124744_add_news_event_item_table.sql  20251215074833_add_news_event_pipeline_run_table.sql  20260106082843_init_user_info_and_rbac_data.sql
scripts/: init_db.sh
service/: Cargo.toml
service/src/: commands.rs  extract_news_info_to_item.rs  health_checker.rs  lib.rs  process_news_info.rs  process_news_info_to_item.rs  register_service.rs  timer_task_command.rs
service/src/spider/: agedm.rs  bilibili.rs  douban.rs  iqiyi.rs  mikanani.rs  mod.rs  news.rs  tencent.rs  youku.rs
spiders/: Cargo.toml
spiders/src/spider/: bilibili.rs  douban.rs  health_checker.rs  iqiyi.rs  mikanani.rs  mod.rs  news.rs  tencent.rs
timer_tasker/: Cargo.toml
timer_tasker/src/: commands.rs  lib.rs  scheduler.rs  task.rs
web_services/: Cargo.toml
web_services/src/: configuration.rs  lib.rs  main.rs  startup.rs  task_manage.rs
web_services/src/common/: app_state.rs  mod.rs  token.rs
web_services/src/dao/postgresql/: ani_info_table.rs  mod.rs  news_info_table.rs  news_item_table.rs  scheduled_tasks.rs  video_info_table.rs
web_services/src/domain/: mod.rs  po.rs  subscriber_name.rs
web_services/src/middleware/: auth_middleware.rs
web_services/src/routes/: index.rs  mod.rs  register.rs
web_services/src/routes/admin/: mod.rs  scheduled_task_reload.rs
web_services/src/routes/api/: me.rs  mod.rs
web_services/src/routes/api/anis/: ani_info.rs  collect.rs  mod.rs
web_services/src/routes/api/news/: events.rs  get.rs  items.rs  mod.rs  stream.rs
web_services/src/routes/api/proxy/: image.rs
web_services/src/routes/api/scheduled_tasks/: create.rs  delete.rs  get.rs  mod.rs  toggle.rs  update.rs
web_services/src/routes/api/sse/: mod.rs  sensor.rs
web_services/src/routes/api/sync/: get.rs  mod.rs  post.rs  task_source.rs
web_services/src/routes/auth/: github.rs  mod.rs  oauth_config.rs  refresh.rs  service.rs  token.rs
web_services/src/routes/auth/oauth/: github.rs
web_services/src/routes/login/: post.rs
web_services/src/routes/register/: post.rs
web_services/src/routes/v1/: auth.rs  mod.rs  oauth.rs
web_services/src/service/: mod.rs  register_service.rs  task_service.rs
web_services/src/service/tasks/: extract_news_info_to_item.rs  mod.rs  task_manage.rs
