[workspace]
resolver = "2"
members = [
    "web_services",
    "common",
    "timer_tasker",
    "infra",
    "service",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bruceblink/ani-updater"
version = "0.0.10"
categories = ["web-programming", "development-tools", "network-programming", "actix-web", "spider", "tokio", "scheduler_tasks"]

[workspace.dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
chrono = { version = "0.4", default-features = false, features = ["clock","serde"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter","chrono","local-time"] }
tracing-bunyan-formatter = "0.3.1"
serde-aux = "4"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
serde_json = "1"
scraper = "0.24.0"
anyhow = "1"
cron = "0.15"
async-trait = "0.1"
num_cpus = "1.17"
chrono-tz = "0.10"
once_cell = "1.21"
thiserror = "2"
rand = { version = "0.9", features = ["std"] }
oauth2 = { version = "4", features = ["reqwest"] }
jsonwebtoken = "9.3"
regex = "1.11.1"
bcrypt = "0.17"
dotenvy = "0.15"
futures = "0.3"
time = "0.3"
futures-util = "0.3"
lazy_static = "1.5.0"
mime = "0.3.17"
