[package]
name = "ani_spiders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
scraper = { workspace = true }
anyhow = { workspace = true }
common = { path = "../common" }