[package]
name = "ani_subs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "ani_subs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
serde-aux = { workspace = true }
tracing-log = { workspace = true }
tracing-actix-web = { workspace = true }
secrecy = { workspace = true }
unicode-segmentation = { workspace = true }
reqwest = { workspace = true }
chrono ={ workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
common = { path = "../common" }
chrono-tz = { workspace = true }
timer_tasker = { path = "../timer_tasker" }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
oauth2.workspace = true
once_cell.workspace = true
rand.workspace = true
dotenvy.workspace = true
