[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken.workspace = true
rand.workspace = true
anyhow.workspace = true
actix-web.workspace = true
sqlx.workspace = true