[package]
name = "service"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
categories.workspace = true

[dependencies]
common = {path = "../common"}
infra = {path = "../infra"}
sqlx.workspace = true
anyhow.workspace = true
actix-web.workspace = true
tokio.workspace = true
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
scraper = { workspace = true }
