[package]
name = "timer_tasker"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono ={ workspace = true }
spiders = { path = "../spiders" }
common = { path = "../common" }
cron = { workspace = true }
async-trait = { workspace = true }
num_cpus = { workspace = true }
