[package]
name = "web_services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "web_services"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { workspace = true }
actix-cors.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
unicode-segmentation = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
chrono ={ workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
common = { path = "../common" }
chrono-tz = { workspace = true }
timer_tasker = { path = "../timer_tasker" }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
oauth2.workspace = true
once_cell.workspace = true
futures.workspace = true
time.workspace = true
futures-util.workspace = true
lazy_static.workspace = true
rand.workspace = true
mime.workspace = true
infra = {path = "../infra"}